--- a/styles/architects.css
+++ b/styles/architects.css
@@ -4,6 +4,25 @@
 {
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-grey{
+    color: #727272;
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+.btn-primary{
+    border-radius: 8px;
+    color: #FFF;
+    font-size: 1.25rem;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #FFF;
+    cursor: pointer;
+    border: 0;
+
+}
 header{
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
@@ -13,11 +32,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 nav > ul{
     display: flex;
 }
@@ -40,7 +55,88 @@ banner-content{
     font-size: 4rem;
     font-weight: 7oo;
     color: #131313;
+    
 }
-.banner-description{
+
+
+.banner img{
+    width: 100%;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-right:70px ;
+    padding-left: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+   
+    font-weight: 500px;
+}
+ .teams-title .teams-features{
+    color: #FF900E;
+    font-weight: 700px;
+ }
+ .facts-card-container{
+    display: flex;
+    justify-content: space-around;
+
+ }
+ .facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+    
+ }
+ .facts-card-container .card-title{
+    font-weight: 600px;
     color: #727272;
+    font-size: 1.2rem;
+    margin-top: 5px;
+ }
+ .facts-card-container .card-status{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+ }
+
+
+
+
+
+ @media screen and (max-width: 576) {
+    header{
+        padding: 20px;
+    }
+    
+    nav ,.teams-container,teams-content{
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+        .teams-content{
+            padding-right:20px ;
+            padding-left: 20px;
+    }
+}
+@media screen and (min-width:576px) and (max-width:960px) {
+    nav{
+        flex-direction: column;
+    }
 }
